--- a/appointments-b.css
+++ b/appointments-b.css
@@ -29,7 +29,7 @@
 }
 
 .appointments-container-name {
-    font-size: 20px;
+    font-size: 26px;
     font-family: 'PPNeueMontrealBook';
     color: #868686;
     margin-top: 0;
@@ -71,18 +71,18 @@
     justify-content: center;
     min-width: 280px;
 
-.appointment-title, .appointment-text {
+.appointment-title, .appointment-text, .appointment-location {
     margin-top: 0;
     margin-bottom: 0;
     color: #868686;
 }
 
-.appointment-title {
+.appointment-text {
     font-size: 24px;
     font-family: 'PPNeueMontreal';
 }
 
-.appointment-text {
+.appointment-title, .appointment-location {
     font-size: 20px;
     font-family: 'PPNeueMontrealBook';
 }
@@ -92,16 +92,20 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding-left: 45%;
+    padding-left: 30%;
 
 .defunct-button, .working-button {
-    background-color: #D4E8FF;
+    background-color: rgb(105, 120, 253);
     border: none;
     border-radius: 9px;
     width: 180px;
     height: 45px;
     color: white;
 }
+}
+.defunct-button:hover, .working-button:hover {
+    background-color:rgb(188, 195, 254);
+    transition: 0.5s;
 }
 
 .success-dialog {
